--- a/index2.html
+++ b/index2.html
@@ -98,7 +98,7 @@
 	 M9.691,47.846c2.366-1.572,4.885-2.836,7.517-3.781c1.945,4.36,4.737,8.333,8.271,11.698C19.328,54.958,13.823,52.078,9.691,47.846
 	z M32.521,55.763c3.534-3.364,6.326-7.337,8.271-11.698c2.632,0.945,5.15,2.209,7.517,3.781
 	C44.177,52.078,38.672,54.958,32.521,55.763z"></path></svg></span>
-        <h6 class="u-custom-font u-text u-text-font u-text-palette-4-base u-text-2">Le Journal de l'Ecole des Capucins Saint Joseph - Batroun<br><br></h6>
+        <h6 class="u-custom-font u-text u-text-font u-text-palette-4-base u-text-2">Le Journal de l'Ecole des Capucins Saint Joseph - Batroun<br></h6>
         <p class="u-text u-text-3">Hello</p>
       </div>
     </section>
