--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-overlap u-white u-xl-mode"><header class="u-clearfix u-header u-white u-header" id="sec-35df"><div class="u-clearfix u-sheet u-sheet-1">
-        <a style="margin: 5px;" href="/Home2.html" data-page-id="754426439" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="800" title="Home">
+        <a style="margin: 5px;" href="/home2.html" data-page-id="754426439" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="800" title="Home">
           <img src="/images/logocolored1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
