--- a/home2.html
+++ b/home2.html
@@ -49,7 +49,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="home.html" style="padding: 10px 20px;">EN</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">EN</a>
             </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="home2.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/blog/blog2.html" style="padding: 10px 20px;">News</a>
 </li></ul>
@@ -58,7 +58,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="home.html" style="padding: 10px 20px;">EN</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">EN</a>
                 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="home2.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/blog/blog2.html">News</a>
 </li></ul>
@@ -113,9 +113,9 @@
                   <a class="u-post-header-link" href="blog/post-1-2.html"><!--blog_post_header_content-->Publier 1<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-1-2.html"><!--blog_post_image-->
-                  <img src="/images/download.png" alt="" class="u-blog-control u-expanded-width u-image u-image-round u-radius-10 u-image-1" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/download.png" alt="" class="u-blog-control u-expanded-width u-image u-image-round u-radius-10 u-image-1" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+                <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-blog-post u-container-style u-repeater-item">
@@ -124,9 +124,9 @@
                   <a class="u-post-header-link" href="blog/post-2-2.html"><!--blog_post_header_content-->Publier 2<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-2-2.html"><!--blog_post_image-->
-                  <img src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-2" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-2" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+                <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-blog-post u-container-style u-repeater-item">
@@ -135,9 +135,9 @@
                   <a class="u-post-header-link" href="blog/post-3-2.html"><!--blog_post_header_content-->Publier 3<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-3-2.html"><!--blog_post_image-->
-                  <img src="/images/download2.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-3" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/download2.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-3" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text u-text-6"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+                <div class="u-blog-control u-post-content u-text u-text-6"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-blog-post u-container-style u-repeater-item">
@@ -146,9 +146,9 @@
                   <a class="u-post-header-link" href="blog/post-4-2.html"><!--blog_post_header_content-->Publier 4<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-4-2.html"><!--blog_post_image-->
-                  <img src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-4" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-4" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text u-text-8"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+                <div class="u-blog-control u-post-content u-text u-text-8"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
             </div><!--/blog_post-->
           </div><a href="/blog/blog2.html" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-4-base u-radius-10 u-text-body-alt-color u-text-hover-white u-btn-1">Toutes Les Publier&nbsp;<span class="u-icon u-text-white u-icon-1"><svg class="u-svg-content" viewBox="0 0 490.677 490.677" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M489.272,37.339c-1.92-3.307-5.44-5.333-9.259-5.333H10.68c-3.819,0-7.339,2.027-9.259,5.333    c-1.899,3.307-1.899,7.36,0.021,10.667l234.667,405.333c1.899,3.307,5.419,5.333,9.237,5.333s7.339-2.027,9.237-5.333 L489.251,48.005C491.149,44.72,491.149,40.645,489.272,37.339z"></path></svg><img></span>
@@ -192,9 +192,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-1-2.html">Publier 1</a>
                 </h2>
                 <a class="u-post-header-link" href="blog/post-1-2.html">
-                  <img src="/images/download-10.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1">
+                  <img style="border-radius:8px;" src="/images/download-10.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1">
                 </a>
-                <div class="u-blog-control u-post-content u-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...</div>
+                <div class="u-blog-control u-post-content u-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...</div>
               </div>
             </div>
             <div class="u-blog-post u-container-style u-repeater-item">
@@ -203,9 +203,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-2-2.html">Publier 2</a>
                 </h2>
                 <a class="u-post-header-link" href="blog/post-2-2.html">
-                  <img src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4-11.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4-11.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2"><!--/blog_post_image-->
                 </a>
-                <div class="u-blog-control u-post-content u-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+                <div class="u-blog-control u-post-content u-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
             </div>
             <div class="u-blog-post u-container-style u-repeater-item">
@@ -214,9 +214,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-3-2.html">Publier 3</a>
                 </h2>
                 <a class="u-post-header-link" href="blog/post-3-2.html">
-                  <img src="/images/download2-12.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/download2-12.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-blog-post u-container-style u-repeater-item">
@@ -225,9 +225,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-4-2.html">Publier 4</a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-4-2.html"><!--blog_post_image-->
-                  <img src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
-                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia. Nunc porttitor mi mauris, sit amet luctus erat mattis eget. Donec odio diam, aliquet vitae congue et, dignissim consectetur...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
             </div><!--/blog_post-->
           </div>
