--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
                   <a class="u-post-header-link" href="blog/post-1.html"><!--blog_post_header_content-->Post 1<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-1.html"><!--blog_post_image-->
-                  <img src="/images/download.png" alt="" class="u-blog-control u-expanded-width u-image u-image-round u-radius-10 u-image-1" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/download.png" alt="" class="u-blog-control u-expanded-width u-image u-image-round u-radius-10 u-image-1" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -124,7 +124,7 @@
                   <a class="u-post-header-link" href="blog/post-2.html"><!--blog_post_header_content-->Post 2<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-2.html"><!--blog_post_image-->
-                  <img src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-2" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-2" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -135,7 +135,7 @@
                   <a class="u-post-header-link" href="blog/post-3.html"><!--blog_post_header_content-->Post 3<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-3.html"><!--blog_post_image-->
-                  <img src="/images/download2.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-3" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/download2.png" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-3" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text u-text-6"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -146,7 +146,7 @@
                   <a class="u-post-header-link" href="blog/post-4.html"><!--blog_post_header_content-->Post 4<!--/blog_post_header_content--></a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-4.html"><!--blog_post_image-->
-                  <img src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-4" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-round u-radius-10 u-image-4" data-image-width="128" data-image-height="128"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text u-text-8"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -192,7 +192,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-1.html">Post 1</a>
                 </h2>
                 <a class="u-post-header-link" href="blog/post-1.html">
-                  <img src="/images/download-10.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1">
+                  <img style="border-radius:8px;" src="/images/download-10.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1">
                 </a>
                 <div class="u-blog-control u-post-content u-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...</div>
               </div>
@@ -203,7 +203,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-2.html">Post 2</a>
                 </h2>
                 <a class="u-post-header-link" href="blog/post-2.html">
-                  <img src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4-11.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/1618846166_6f6838dd65ed683632f0d0194c4ecbf4-11.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2"><!--/blog_post_image-->
                 </a>
                 <div class="u-blog-control u-post-content u-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -214,7 +214,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-3.html">Post 3</a>
                 </h2>
                 <a class="u-post-header-link" href="blog/post-3.html">
-                  <img src="/images/download2-12.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/download2-12.png" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
@@ -225,7 +225,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a class="u-post-header-link" href="blog/post-4.html">Post 4</a>
                 </h2><!--/blog_post_header-->
                 <a class="u-post-header-link" href="blog/post-4.html"><!--blog_post_image-->
-                  <img src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4"><!--/blog_post_image-->
+                  <img style="border-radius:8px;" src="/images/pic5.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4"><!--/blog_post_image-->
                 </a><!--blog_post_content-->
                 <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat urna nec laoreet gravida. Mauris bibendum ultrices lacinia...<!--/blog_post_content_content--></div><!--/blog_post_content-->
               </div>
