--- a/home.html
+++ b/home.html
@@ -337,7 +337,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <h4 class="u-custom-font u-text u-text-font u-text-palette-4-base u-text-1">TO LIVE IS TO RISK IT ALL; OTHERWISE YOU'RE JUST AN INERT CHUNK OF RANDOMLY ASSEMBLED MOLECULES, DRIFTING WHEREVER THE UNIVERSE BLOWS YOU.</h4><span class="u-icon u-icon-circle u-text-white u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 409.294 409.294" ><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-0171"></use></svg><svg class="u-svg-content" viewBox="0 0 409.294 409.294" id="svg-0171"><path d="m233.882 29.235v175.412h116.941c0 64.48-52.461 116.941-116.941 116.941v58.471c96.728 0 175.412-78.684 175.412-175.412v-175.412z"></path><path d="m0 204.647h116.941c0 64.48-52.461 116.941-116.941 116.941v58.471c96.728 0 175.412-78.684 175.412-175.412v-175.412h-175.412z"></path></svg></span>
           </div>
         </div>
-        <h5 class="u-text u-text-2">- Rick Sanchez, Smartest Creature To Have Ever Lived&nbsp; -</h5>
+        <h5 class="u-text u-text-2">- Rick Sanchez, Tv Series Character&nbsp; -</h5>
       </div>
     </section>
     <section class="u-clearfix u-grey-10 u-section-7" id="carousel_1b1c">
