--- a/home.html
+++ b/home.html
@@ -399,7 +399,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-6311"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">©2022 - CSJ Forum - CSJ&nbsp;</p>
+        <p class="u-small-text u-text u-text-variant u-text-1"><marquee>©2022 - CSJ Forum - CSJ&nbsp;</marquee></p>
       </div></footer>
   </body>
 </html>
